问卷系统前端界面-60%

--- a/test/src/assets/css/index.scss
+++ b/test/src/assets/css/index.scss
@@ -10,21 +10,21 @@
 
 @layer base {
     html {
-      font-family:sans-serif;
+      @apply font-body;
     }
   }
 
 @layer components{
     .questionTitle{
-        @apply text-lg text-gray-700 font-serif align-middle;
+        @apply text-lg text-gray-700 align-middle;
         span{
-            @apply text-red-500 align-middle;
+            @apply text-red-500 align-middle -ml-[10px];
         }
     }
 }
 
 @layer components{
     .questionBody{
-        @apply ml-5 mt-2 font-serif;
+        @apply ml-5 mt-2;
     }
 }
