--- a/RichTextEditor/weizhu.css
+++ b/RichTextEditor/weizhu.css
@@ -5,13 +5,13 @@
 }
 
 body {
-  background-color: #0984e3;
+  background-color: #338cf4;
 }
 
 .container {
-  background-color: #dfe6e9;
+  background-color: #ffffff;
   width: 90vmin;
-  padding: 50px 50px;
+  padding: 50px 30px;
   position: absolute;
   transform: translate(-50%, -50%);
   left: 50%;
@@ -34,7 +34,56 @@ button {
   place-items: center;
   border-radius: 3px;
   border: none;
-  background-color: #dfe6e9;
+  background-color: #ffffff;
   outline: none;
-  color: #2d3436;
+  color: #020929;
+}
+
+select {
+  padding: 7px;
+  border: 1px solid #020929;
+  border-radius: 3px;
+}
+
+.options label,
+.options select {
+  font-family: "Poppins", sans-serif;
+}
+
+.input-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+input[type="color"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  width: 40px;
+  height: 28px;
+  border: none;
+  cursor: pointer;
+}
+
+input[type="color"]::-webkit-color-swatch {
+  border-radius: 15px;
+  box-shadow: 0 0 0 2px #ffffff, 0 0 0 3px #020929;
+}
+
+input[type="color"]::-moz-color-swatch {
+  border-radius: 15px;
+  box-shadow: 0 0 0 2px #ffffff, 0 0 0 3px #020929;
+}
+
+#text-input {
+  margin-top: 10px;
+  border: 1px solid #dddddd;
+  padding: 20px;
+  height: 50vh;
+}
+
+.active {
+  background-color: #e0e9ff;
 }
