在公司最后一次更新代码

--- a/RichTextEditor/weizhu.scss
+++ b/RichTextEditor/weizhu.scss
@@ -73,5 +73,5 @@ input[type="color"]::-moz-color-swatch {
   height: 50vh;
 }
 .active {
-  background-color: #e0e9ff;
+  background-color: #b2bec3;
 }
